<resources>
    <string name="app_name">Qicpic</string>

    <string name="app_font_bold">morn_bold.ttf</string>
    <string name="app_font_sim_bold">morn_medium.ttf</string>
    <string name="app_font_bold_italic">morn_bold_oblique.ttf</string>
    <string name="app_font_regular">morn_regular.ttf</string>
    <string name="app_font_thin">morn_regular_oblique.ttf</string>

    <string name="member_s_login">MEMBER\'S LOGIN</string>
    <string name="username_e_mail">User Id</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">LOGIN</string>
    <string name="new_user_sign_up">New User? <font fgcolor="#CD7F0C">Sign Up</font></string>
    <string name="postGalleryPaths">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="story_highlights">Story Highlights</string>
    <string name="keep_your_favourite_stories_on_your_profile">keep your favourite stories on your profile</string>
    <string name="txt_new">New</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="_3_of_4_complete">3 of 4 COMPLETE</string>
    <string name="add_bio">Add Bio</string>
    <string name="add_your_name">Add Your Name</string>
    <string name="add_your_full_name_so_your_friend_know_it_s_you">Add your full name so your friend know it\'s you</string>
    <string name="edit_name">Edit Name</string>
    <string name="find_more">Find More</string>
    <string name="find_people_to_follow">Find People to follow</string>
    <string name="follow_people_and_interests_you_care_about">Follow people and interests you care about</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="switch_to_professional_account">Switch to Professional Account</string>
    <string name="profile_information">Profile Information</string>
    <string name="type_here">Type here ...</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="save_path">save path : %s</string>

    <string name="iamutkarshtiwari_github_io_ananas_loading">Loading…</string>
    <string name="permission_necessary">Allow Permission</string>
    <string name="storage_permission_is_encessary_to_wrote_event">Please allow to access the device gallery.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_more">more</string>
    <string name="read_less"> less</string>
    <string name="discover_people">Discover People</string>
    <string name="new_suggestions">New Suggestions</string>
    <string name="all_suggestions">All Suggestions</string>
    <string name="follow">Follow</string>
    <string name="remove">Remove</string>
    <string name="unfollow">Unfollow</string>
    <string name="file_limit_size_upload_format">Files must be less than %sMB</string>
    <string name="welcome_to_qicpic">Welcome to Qicpic</string>
    <string name="write_a_message">Write a message...</string>
    <string name="search">Search</string>
    <string name="report">Report...</string>
    <string name="turn_on_post_notification">Turn on Post Notification</string>
    <string name="copy_link">Copy Link</string>
    <string name="share_to">Share to...</string>
    <string name="mute">Mute</string>
    <string name="notifications">Notifications</string>
    <string name="privacy">Privacy</string>
    <string name="security">Security</string>
    <string name="ads">Ads</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="theme">Theme</string>
    <string name="accounts_center">Accounts Center</string>
    <string name="control_settings_for_connected_experiences_across_qicpic_the_qicpic_app_and_messenger_including_post_sharing_and_loggin_in">Control settings for connected experiences across Qicpic , the Qicpic app and Messenger , including post sharing and loggin in.</string>
    <string name="title_home">Home</string>
    <string name="title_video">Video</string>
    <string name="title_post">Pots</string>
    <string name="title_like">Like</string>
    <string name="title_profile">Profile</string>
</resources>