<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/ic_video"
        android:title="@string/title_video" />

    <item
        android:id="@+id/navigation_posts"
        android:icon="@drawable/ic_post"
        android:title="@string/title_post" />

    <item
        android:id="@+id/navigation_like"
        android:icon="@drawable/ic_like"
        android:title="@string/title_like" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_pic"
        android:title="@string/title_profile" />

</menu>