<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.saqcess.qicpic.view.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />


    <fragment
        android:id="@+id/navigation_video"
        android:name="com.saqcess.qicpic.view.fragment.VideosFragment"
        android:label="@string/title_video"
        tools:layout="@layout/videos_fragment" />

    <fragment
        android:id="@+id/navigation_posts"
        android:name="com.saqcess.qicpic.view.fragment.PostsFragment"
        android:label="@string/title_post"
        tools:layout="@layout/posts_fragment" />

    <fragment
        android:id="@+id/navigation_like"
        android:name="com.saqcess.qicpic.view.fragment.LikesFragment"
        android:label="@string/title_like"
        tools:layout="@layout/likes_fragment" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.saqcess.qicpic.view.fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />

</navigation>