<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <androidx.cardview.widget.CardView
        android:id="@+id/cv_data"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_margin="@dimen/dp10"
        app:cardCornerRadius="@dimen/dp15">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/welcome_bg"

            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/report"
                android:textStyle="normal"
                android:fontFamily="@font/morn_regular"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp16"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/turn_on_post_notification"
                android:textStyle="normal"
                android:fontFamily="@font/morn_regular"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/dp20"
                android:textSize="@dimen/sp16"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/copy_link"
                android:textStyle="normal"
                android:fontFamily="@font/morn_regular"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/dp20"
                android:textSize="@dimen/sp16"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:id="@+id/txt_share_to"
                android:layout_width="match_parent"
                android:text="@string/share_to"
                android:textStyle="normal"
                android:fontFamily="@font/morn_regular"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/dp20"
                android:textSize="@dimen/sp16"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:id="@+id/txt_unfollow"
                android:layout_width="match_parent"
                android:text="@string/unfollow"
                android:textStyle="normal"
                android:fontFamily="@font/morn_regular"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/dp20"
                android:textSize="@dimen/sp16"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/mute"
                android:textStyle="normal"
                android:fontFamily="@font/morn_regular"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/dp20"
                android:textSize="@dimen/sp16"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
