<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="EditProfile"
            type="com.saqcess.qicpic.viewmodel.EditProfileViewModel" />

    </data>

    <LinearLayout
        android:id="@+id/ll_editProfileData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/welcome_bg"
        android:orientation="vertical"
        tools:context=".view.activity.EditProfileActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_gravity="center"
            android:background="@drawable/greybox"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_cancel"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="@dimen/dp30"
                android:layout_gravity="center"
                android:padding="10dp"
                android:background="@drawable/cancel_icon" />
<!--android:onClick="@{handlers::onCancelClicked}"-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp30"
                android:layout_marginLeft="@dimen/dp30"
                android:gravity="start|center"
                android:text="Edit Profile"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp16"
                android:layout_weight="1"
                android:fontFamily="@font/morn_bold" />

            <ImageView
                android:id="@+id/iv_accept"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:padding="@dimen/dp10"
                android:layout_marginRight="@dimen/dp50"
                android:layout_gravity="center"
                android:background="@drawable/accept_icon" />
            <!-- android:onClick="@{handlers::onAcceptClicked}"-->


        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp30"
            android:paddingRight="@dimen/dp30">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/dp100"
                android:layout_height="@dimen/dp100"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp10"
                android:src="@drawable/profile_pic"
                app:civ_border_color="#7e3c62"
                bind:profilePicture="@{EditProfile.profilePicture}"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/tv_updateProfilePic"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp30"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:text="@string/change_profile_photo"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp14"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/dp20"
                android:fontFamily="@font/morn_bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorWhite"
                android:layout_margin="@dimen/dp5"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@={EditProfile.fullName}"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="@dimen/sp16"
                    android:fontFamily="@font/morn_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_username"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorWhite"
                android:layout_margin="@dimen/dp5"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@={EditProfile.userName}"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHintLight"
                    android:textSize="@dimen/sp16"
                    android:fontFamily="@font/morn_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_website"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorWhite"
                android:layout_margin="@dimen/dp5"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/website"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@={EditProfile.website}"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHintLight"
                    android:textSize="@dimen/sp16"
                    android:fontFamily="@font/morn_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_bio"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorWhite"
                android:layout_margin="@dimen/dp5"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bio"
                    android:inputType="text"
                    android:text="@={EditProfile.bio}"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHintLight"
                    android:textSize="@dimen/sp16"
                    android:fontFamily="@font/morn_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp30"
                android:gravity="start"
                android:text="@string/switch_to_professional_account"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp18"
                android:fontFamily="@font/morn_bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp30"
                android:layout_marginTop="@dimen/dp5"
                android:gravity="start"
                android:text="@string/profile_information"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp16"
                android:fontFamily="@font/morn_bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorWhite"
                android:layout_margin="@dimen/dp5"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:text="@={EditProfile.email}"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHintLight"
                    android:textSize="@dimen/sp16"
                    android:fontFamily="@font/morn_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_mobile"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/dp5"
                android:textColorHint="@color/colorWhite"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:text="@={EditProfile.mobileNumber}"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHintLight"
                    android:textSize="@dimen/sp16"
                    android:fontFamily="@font/morn_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/dp5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:layout_marginRight="@dimen/dp30"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/morn_bold"/>

                <Spinner
                    android:id="@+id/spinner_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorWhite"
                    android:layout_weight="1" />


            </LinearLayout>

<!--
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_gender"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorWhite"
                android:layout_margin="@dimen/dp5"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@={EditProfile.gender}"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHintLight"
                    android:textSize="@dimen/sp16"
                    android:fontFamily="@font/morn_regular"/>
            </com.google.android.material.textfield.TextInputLayout>
-->


        </LinearLayout>


    </LinearLayout>

</layout>




