<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="unfollowUserModel"
            type="com.saqcess.qicpic.viewmodel.UnfollowUsersResponseModel" />

        <variable
            name="unFollowUserData"
            type="com.saqcess.qicpic.viewmodel.UnFollowerData" />
    </data>

    <LinearLayout
        android:id="@+id/ll_findFollowers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.activity.FindMorePeopleActivity">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimaryDark"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/welcome_bg"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_findPeople"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:background="@drawable/greybox"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_back"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/dp50"
                        android:background="@drawable/back"
                        android:padding="10dp" />

                    <com.saqcess.qicpic.customeview.TypeTextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp30"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/dp30"
                        android:layout_weight="1"
                        android:gravity="start|center"
                        android:text="@string/discover_people"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold"
                        app:custom_font="@string/app_font_bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp30"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/dp10"
                        android:layout_marginTop="@dimen/dp10"
                        android:layout_marginBottom="@dimen/dp5"
                        android:gravity="start|center"
                        android:text="@string/new_suggestions"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp14"
                        android:fontFamily="@font/morn_bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_new_suggestions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/discover_people_item_lyt" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:orientation="vertical">
                    <com.saqcess.qicpic.customeview.TypeTextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp30"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/dp30"
                        android:layout_marginTop="@dimen/dp10"
                        android:layout_marginBottom="@dimen/dp5"
                        android:gravity="start|center"
                        android:text="@string/all_suggestions"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/sp14"
                        app:custom_font="@string/app_font_bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_all_suggestions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/discover_people_item_lyt" />

                </LinearLayout>




            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</layout>
